--- a/styles.css
+++ b/styles.css
@@ -200,26 +200,20 @@ a {
   text-shadow: 0px 0px 1px #000;
   text-align: center;
   text-shadow: 0px 0px 5px #ba6fb4;
-  margin: 64px 0px 0px 0px;
+  margin: 70px 2px 0px 2px;
   font-size: 1.05em;
 }
 
 h5.logo-warp-one {
-  padding-bottom: 5px;
-  margin-left: -2.5px;
-  transform: rotateY(30deg) rotate(10deg) translateY(7px);
-  -webkit-transform: rotateY(30deg) rotate(10deg) translateY(7px);
+  padding-top: 5px;
+  transform: rotateY(25deg) rotate(5deg);
 }
 h5.logo-warp-two {
-  padding-top: 5px;
-  margin: 64px 1px 0 1px;
-  transform: translateY(1px);
-  -webkit-transform: translateY(1px);
+  padding-top: 10px;
 }
 h5.logo-warp-three {
   padding-top: 5px;
-  transform: rotateY(-25deg) rotate(-8deg) translateY(3px);
-  -webkit-transform: rotateY(-25deg) rotate(-8deg) translateY(3px);
+  transform: rotateY(-25deg) rotate(-5deg);
 }
 
 @media (max-width: 650px) {
@@ -245,24 +239,20 @@ h5.logo-warp-three {
 
   .logo h5 {
     padding-top: 10px;
-    margin: 64px 0px 0px 0px;
+    margin: 80px 2px 0px 2px;
     font-size: 1.2em;
   }
 
   h5.logo-warp-one {
     padding-top: 5px;
-    transform: rotateY(30deg) rotate(10deg) translateY(13px);
-    -webkit-transform: rotateY(30deg) rotate(10deg) translateY(13px);
+    transform: rotateY(25deg) rotate(5deg);
   }
   h5.logo-warp-two {
-    padding-top: 5px;
-    transform: translateY(6px);
-    -webkit-transform: translateY(6px);
+    padding-top: 10px;
   }
   h5.logo-warp-three {
     padding-top: 5px;
-    transform: rotateY(-25deg) rotate(-8deg) translateY(8px);
-    -webkit-transform: rotateY(-25deg) rotate(-8deg) translateY(8px);
+    transform: rotateY(-25deg) rotate(-5deg);
   }
 }
 
